--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-resizable": "^3.0.5",
-    "react-rnd": "^10.4.1"
+    "react-rnd": "^10.4.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
